src/test/deca/context/valid/decl_var_already_declared_in_method.deca
// Test contexte, déclaration d'une variable déjà existante dans la 
// méthode de la même classe

class A {

    int x = 12;
    void simpleMethod(){
        int x = 5;
    }
}

// Resultat:
//# IL DEVRAIT Y AVOIR UNE ERREUR
