src/test/deca/context/invalid/print_voidMethod.deca
// Test la règle 3.30

class A {
    void voidMethod(){
        int x = 5;
    }
}

{
    A a = new A();
    print(a.voidMethod());
}

// Resultat:
//# TODOTEST 
